<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sdkTokenData"
            type="com.example.tokendemo.ui.token.SdkTokenViewModel" />

        <import type="android.view.View" />

        <import type="com.example.tokendemo.HttpConnect" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragmentSdkTokenParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".ui.token.SdkTokenFragment">

            <TextView
                android:id="@+id/textView6"
                style="@style/itemTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/requestedToken"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/separateTokenCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/accessTokenEt" />

            <View
                android:id="@+id/view6"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:background="#E3E3E3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separateTokenEt" />

            <EditText
                android:id="@+id/separateTokenEt"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/onlyTokenHint"
                android:text="@{sdkTokenData.separateToken}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:background="#E3E3E3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accessTokenEt" />

            <EditText
                android:id="@+id/accessTokenEt"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/accessTokenHint"
                android:text="@{sdkTokenData.accessToken}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView"
                style="@style/itemTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/sdkTokenTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/apiEt"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/apiHint"
                android:text="@{sdkTokenData.tokenUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                style="@style/itemTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/accessToken"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/accessTokenCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/apiEt" />

            <Button
                android:id="@+id/requestBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_selector"
                android:onClick="@{()-> sdkTokenData.operateToken(HttpConnect.METHOD_POST)}"
                android:text="@string/tokenGet"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/tokenDeleteBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separateTokenEt" />

            <Button
                android:id="@+id/tokenDeleteBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_selector"
                android:onClick="@{()-> sdkTokenData.operateToken(HttpConnect.METHOD_DELETE)}"
                android:text="@string/tokenDelete"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/refreshTokenBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/requestBtn"
                app:layout_constraintTop_toTopOf="@+id/requestBtn" />

            <Button
                android:id="@+id/refreshTokenBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_selector"
                android:onClick="@{()-> sdkTokenData.operateToken(HttpConnect.METHOD_PUT)}"
                android:text="@string/tokenRefresh"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tokenDeleteBtn"
                app:layout_constraintTop_toTopOf="@+id/tokenDeleteBtn" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_edittext_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textResponse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@{sdkTokenData.requstTokenResponse}" />
            </ScrollView>

            <TextView
                android:id="@+id/textView4"
                style="@style/itemTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resultTextview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requestBtn" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:background="#E3E3E3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apiEt" />

            <CheckBox
                android:id="@+id/accessTokenCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="@{sdkTokenData.accessTokenChecked}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/separateTokenCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="@{sdkTokenData.leftSeparateTokenChecked}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/progressLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>


</layout>